--- a/src/index.css
+++ b/src/index.css
@@ -150,3 +150,9 @@ h1 {
   border-radius: 0.5em;
   cursor: pointer;
 }
+.status {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 1em;
+  text-align: center;
+}
