--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   overflow-y: scroll;
 }
 
+button {
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -19,6 +23,10 @@ a {
 h1 {
   text-align: center;
   margin-bottom: 40px;
+  color: #3498db;
+  font-size: 3rem;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  animation: fadeIn 2s;
 }
 
 .container {
@@ -31,15 +39,48 @@ h1 {
   margin: 40px 0;
 }
 
+/* loading */
 .loading {
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: loading 1s infinite;
 }
 
+@keyframes loading {
+  0% {
+    color: #3498db;
+  }
+  50% {
+    color: #9b59b6;
+  }
+  100% {
+    color: #3498db;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.content {
+  animation: fadeIn 2s;
+}
+
+/* navbar */
 .navbar {
   padding: 20px 0;
-  background-color: #f8f8f8;
+  background-color: #3498db;
   margin-bottom: 40px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .navbar__list {
@@ -52,21 +93,85 @@ h1 {
   display: block;
   padding: 10px 20px;
   border-radius: 4px;
+  background-color: #ffffff;
+  color: #3498db;
+  transition: all 0.3s ease-in-out;
+  font-size: 1rem;
+  line-height: 1.25;
+  border: none;
+}
+
+.navbar__link:hover {
+  background-color: #f8f8f8;
+  transform: scale(1.1);
 }
 
 .navbar__link.active {
-  background-color: tomato;
+  background: linear-gradient(45deg, #9b59b6, #3498db);
   color: white;
 }
 
+/* products-empty */
+.products-empty {
+  text-align: center;
+  font-size: 2rem;
+}
+
+/* products-filter */
+.products-filter {
+  display: grid;
+  grid-template-columns: 1fr 200px 150px 40px;
+  gap: 20px;
+  background: linear-gradient(135deg, #3498db, #9b59b6);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+  justify-content: center;
+}
+
+.products-filter button,
+.products-filter input,
+.products-filter select {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.products-filter button {
+  align-self: flex-end;
+}
+
+.products-filter button > * {
+  scale: 1.5;
+  translate: 0 2px;
+}
+
+.products-filter button:hover,
+.products-filter button:focus,
+.products-filter input:hover,
+.products-filter input:focus,
+.products-filter select:hover,
+.products-filter select:focus {
+  transform: scale(1.05);
+}
+
+.products-filter input::placeholder {
+  color: #888888;
+}
+
+/* products-list */
 .products-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   gap: 20px;
   margin-bottom: 50px;
   justify-items: center;
 }
 
+/* product-item */
 .product-item {
   display: grid;
   grid-template-areas:
@@ -83,6 +188,7 @@ h1 {
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-in-out;
   overflow: hidden;
+  user-select: none;
 }
 
 .product-item:hover {
@@ -111,7 +217,7 @@ h1 {
   font-style: italic;
 }
 
-.product-item_price {
+.product-item__price {
   grid-area: prc;
   color: #e67e22;
   font-weight: bold;
@@ -124,35 +230,193 @@ h1 {
   grid-area: img;
   object-fit: cover;
 }
-.modal {
-  width: 40em;
-  height: 15em;
-  background: lightblue;
-  border-radius: 1em;
-  position: absolute;
-  flex-direction: column;
+
+.product-item__actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.product-item__delete,
+.product-item__edit {
+  display: flex;
   align-items: center;
-  padding: 3em;
-  left: calc(50% - 20em);
-  top: calc(50% - 15em);
-}
-.modal__title {
-  font-size: 2em;
-  font-weight: bold;
-  margin-bottom: 1em;
-}
-.modal__button {
-  margin: 1em;
-  padding: 1em;
-  background: tomato;
-  color: white;
+  justify-content: center;
+  gap: 5px;
+  padding: 10px 10px;
   border: none;
-  border-radius: 0.5em;
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.product-item__delete {
+  background-color: #e74c3c;
+}
+
+.product-item__delete:hover {
+  background-color: #c0392b;
+  transform: translateY(-2px);
+}
+
+.product-item__edit {
+  background-color: #3498db;
+}
+
+.product-item__edit:hover {
+  background-color: #2980b9;
+  transform: translateY(-2px);
+}
+
+/* buttons-group */
+.buttons-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.add-product-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3498db;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.add-product-btn:hover {
+  background-color: #2980b9;
+  transform: translateY(-2px);
+}
+
+/* pagination */
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.pagination__btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3498db;
+  color: #ffffff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.pagination__btn:hover {
+  background-color: #2980b9;
+  transform: translateY(-2px);
+}
+
+.pagination__btn:disabled {
+  background-color: #bdc3c7;
+  cursor: not-allowed;
+}
+
+/* modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  animation: fadeIn 0.5s;
+}
+
+.modal {
+  background: white;
+  padding: 40px;
+  border-radius: 4px;
+  width: 80%;
+  max-width: 500px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  animation: fadeIn 0.5s;
+}
+
+.modal__close {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 20px;
+  color: #888888;
   cursor: pointer;
 }
-.status {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-top: 1em;
+
+.modal__title {
+  font-size: 2rem;
+  color: #3498db;
   text-align: center;
+  margin-bottom: 20px;
+}
+
+/* form */
+form {
+  display: grid;
+  gap: 20px;
+  background: linear-gradient(135deg, #3498db, #9b59b6);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-label {
+  color: #ffffff;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+}
+
+.form-control {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
+  transition: all 0.3s ease-in-out;
+  resize: vertical;
+}
+
+.form-control:hover,
+.form-control:focus {
+  transform: scale(1.05);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.form-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: #3498db;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.form-button:hover {
+  background-color: #f8f8f8;
+  transform: translateY(-2px);
 }
